fixed overflowing of buttons on index, documentation and example page

--- a/assets/css/documentation.css
+++ b/assets/css/documentation.css
@@ -69,7 +69,3 @@ section {
 .margin-left--half {
   margin-left: 0.5rem;
 }
-
-.sbtn {
-  font-size: 1rem;
-}
